--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="row">
                       <div class="col-lg-6">
                           <h2>Find developer in your area!</h2>
-                        <p>El-revelador in the garage was developed to help others find people in their area Developera who are looking to hang out right now. Boyfriend doesn't want to go see the hot new movie? Friends bailed on you at the last minute? Want to try that new resturant downtown but don't want to go alone? El-reveador In The Garage can help.</p>
+                        <p>El-revelador in the garage was developed to help others find Developers in their aera who are looking to hang out right now. Boyfriend doesn't want to go see the hot new movie? Friends bailed on you at the last minute? Want to try that new resturant downtown but don't want to go alone? El-reveador In The Garage can help.</p>
                         <p>Our drivers will pick you up  and you will hang out with a Dev for the entirety of your event!</p>
                     <h2 class="paddingTop">It works in 3 easy steps</h2> 
                     <ol> 
