--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                               <img src="img/lander.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                               <h4 class="title">Sean Dees</h4>
                               <p class="category text-primary">CTO</p>
-                              <p class="description">I hope KITG proves to be a useful tool that millions of people can enjoy. Our goal is to provide safe, reliable, long-lasting friendships and improve quality of life.
+                              <p class="description">I hope ELRSG proves to be a useful tool that millions of people can enjoy. Our goal is to provide safe, reliable, long-lasting friendships and improve quality of life.
                                 <!-- <a href="#">links</a> for people to be able to follow them outside the site.</p>
                               <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-google-plus"></i></a>
                               <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-youtube"></i></a>
