--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </ul> 
                     </div>
                       <div class="col-lg-6">
-                        
+                        <img src="img/friends.jpg" alt="profile image">
                       </div>
                     </div>
                   </div>
@@ -133,7 +133,7 @@
                         <div class="row">
                           <div class="col-lg-12">
                             <div class="team-player">
-                              <img src="img/lander.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                             
                               <h4 class="title">Sean Dees</h4>
                               <p class="category text-primary">CTO</p>
                               <p class="description">I hope ELRSG proves to be a useful tool that millions of people can enjoy. Our goal is to provide safe, reliable, long-lasting friendships and improve quality of life.
